<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Descrição</string>
    <string name="task_title">Título da Tarefa</string>
    <string name="delete_task">Deletar tarefa</string>
    <string name="show_task">Mostrar detalhes</string>
    <string name="edit_task">Editar tarefa</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="restaurar_tarefa">Restaurar Tarefa</string>
    <string name="home">Home</string>
    <string name="prioridade_da_tarefa">Prioridade da Tarefa</string>
</resources>