<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    tools:context=".ui.LoginActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_in"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Email" />


        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/sign_up_btn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/reset_password_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>